# EcomFruitAI

./: README.md  requirements.txt
ecomfruitai/: LICENSE  Makefile  README.md  config.py  dataset.py  plots.py  pyproject.toml
ecomfruitai/modeling/: predict.py  train.py
notebooks/: ecomfruitai.ipynb  experimental.ipynb
