[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ecomfruitai"
version = "0.0.1"
description = "Creating Synthetic Fruit Images with Diffusion Models"
authors = [
  { name = "EcomFruitAI group" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["ecomfruitai"]
include = ["pyproject.toml", "ecomfruitai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ecomfruitai"]
force-sort-within-sections = true

